header nav menu added, scrollTo active slide, animations

--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 
 <body>
     <div class="wrapper">
+        <header class="header">
+            <nav class="header__menu menu">
+                <a href="#!" class="menu__link">Экран 1</a>
+                <a href="" class="menu__link">Экран 2</a>
+                <a href="" class="menu__link">Экран 3</a>
+                <a href="" class="menu__link">Экран 4</a>
+            </nav>
+        </header>
         <main class="page">
             <div class="page__wrapper">
                 <div class="page__screen screen">
                     <div class="screen__content">
-                        <h1 class="screen__title screen__title_bg">Привет! Это простой лендинг</h1>
+                        <h1 class="screen__title screen__title_bg">Любите горы?</h1>
                     </div>
                     <div class="screen__body">
                         <div class="screen__image">
@@ -26,12 +34,63 @@
                     </div>
                 </div>
                 <div class="page__screen screen">
-                    <div class="screen__content">
-                        <h1 class="screen__title screen__title_bg">Привет! Это Это простой лендинг</h1>
+                    <div class="screen__body screen__text">
+                        <h3 class="screen__text-title">Татры</h3>
+                        <div class="screen__text-group">
+                            <div class="screen__text-txt">
+                                <p>Та́тры (словацк., польск. Tatry) — наивысшая часть Карпат, находящаяся в Словакии
+                                    (3/4
+                                    площади) и Польше, часть Фатранско-Татранской области. Наивысшая точка — гора
+                                    Герлаховски-Штит, 2655 метров. В Татрах насчитывается 25 пиков высотой более 2500
+                                    метров.</p>
+                                <p>И словацкая, и польская стороны гор находятся под охраной словацкого и польского
+                                    татранских национальных заповедников (соответственно Tatranský národný park (TANAP)
+                                    и
+                                    Tatrzański Park Narodowy), которые сотрудничают с 1954 года. В 1993 году Татры были
+                                    занесены в список биосферных заповедников ЮНЕСКО.
+
+                                    В Словакии тропы в Татрах над горными хижинами закрыты с 1 ноября по 15 июня. За
+                                    нарушение запрета предусмотрен штраф. В Польше тропы открыты круглый год.
+                                    Туристическим
+                                    центром с польской стороны является город Закопане, со словацкой — Попрад.</p>
+                            </div>
+                            <div class="screen__text-img">
+                                <img src="./img/gory-tatry_112.jpg" alt="Tatry">
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <div class="page__screen screen">
                     <div class="screen__body">
                         <div class="screen__image">
                             <img src="./img/02.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="page__screen screen">
+                    <div class="screen__body screen__text">
+                        <h3 class="screen__text-title">Татры</h3>
+                        <div class="screen__text-group">
+                            <div class="screen__text-txt">
+                                <p>Та́тры (словацк., польск. Tatry) — наивысшая часть Карпат, находящаяся в Словакии
+                                    (3/4
+                                    площади) и Польше, часть Фатранско-Татранской области. Наивысшая точка — гора
+                                    Герлаховски-Штит, 2655 метров. В Татрах насчитывается 25 пиков высотой более 2500
+                                    метров.</p>
+                                <p>И словацкая, и польская стороны гор находятся под охраной словацкого и польского
+                                    татранских национальных заповедников (соответственно Tatranský národný park (TANAP)
+                                    и
+                                    Tatrzański Park Narodowy), которые сотрудничают с 1954 года. В 1993 году Татры были
+                                    занесены в список биосферных заповедников ЮНЕСКО.
+
+                                    В Словакии тропы в Татрах над горными хижинами закрыты с 1 ноября по 15 июня. За
+                                    нарушение запрета предусмотрен штраф. В Польше тропы открыты круглый год.
+                                    Туристическим
+                                    центром с польской стороны является город Закопане, со словацкой — Попрад.</p>
+                            </div>
+                            <div class="screen__text-img">
+                                <img src="./img/gory-tatry_112.jpg" alt="Tatry">
+                            </div>
                         </div>
                     </div>
                 </div>
