resize events, adaptive page pagination, responsive

--- a/index.html
+++ b/index.html
@@ -24,20 +24,21 @@
         <main class="page">
             <div class="page__wrapper">
                 <div class="page__screen screen">
-                    <div class="screen__content">
-                        <h1 class="screen__title screen__title_bg">Любите горы?</h1>
-                    </div>
+                    <h1 class="screen__title screen__title_bg" data-swiper-parallax="50%"
+                        data-swiper-parallax-opacity="0">Любите горы?</h1>
                     <div class="screen__body">
-                        <div class="screen__image">
+                        <div class="screen__image" data-swiper-parallax="33%" data-swiper-parallax-scale="1.1">
                             <img src="./img/01.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="page__screen screen">
-                    <div class="screen__body screen__text">
-                        <h3 class="screen__text-title">Татры</h3>
+                    <div class="screen__content">
+                        <h3 class="screen__text-title" data-swiper-parallax="-100%" data-swiper-parallax-opacity="0"
+                            data-swiper-parallax-duration="1000">Татры</h3>
                         <div class="screen__text-group">
-                            <div class="screen__text-txt">
+                            <div class="screen__text" data-swiper-parallax="-100%" data-swiper-parallax-opacity="0"
+                                data-swiper-parallax-duration="900">
                                 <p>Та́тры (словацк., польск. Tatry) — наивысшая часть Карпат, находящаяся в Словакии
                                     (3/4
                                     площади) и Польше, часть Фатранско-Татранской области. Наивысшая точка — гора
@@ -62,16 +63,18 @@
                 </div>
                 <div class="page__screen screen">
                     <div class="screen__body">
-                        <div class="screen__image">
-                            <img src="./img/02.jpg" alt="">
+                        <div class="screen__image" data-swiper-parallax="40%">
+                            <img src="./img/02.jpg">
                         </div>
                     </div>
                 </div>
                 <div class="page__screen screen">
-                    <div class="screen__body screen__text">
-                        <h3 class="screen__text-title">Татры</h3>
+                    <div class="screen__content">
+                        <h3 class="screen__text-title" data-swiper-parallax="-100%" data-swiper-parallax-opacity="0"
+                            data-swiper-parallax-duration="1000">Татры</h3>
                         <div class="screen__text-group">
-                            <div class="screen__text-txt">
+                            <div class="screen__text" data-swiper-parallax="-100%" data-swiper-parallax-opacity="0"
+                                data-swiper-parallax-duration="900">
                                 <p>Та́тры (словацк., польск. Tatry) — наивысшая часть Карпат, находящаяся в Словакии
                                     (3/4
                                     площади) и Польше, часть Фатранско-Татранской области. Наивысшая точка — гора
